Fic hamburger menu button color contrast accessibility issue

--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -110,6 +110,7 @@
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
+  color:$white;
   
   span {
 		display: block;
